--- a/src/Pheetup/CoreBundle/Resources/views/Crud/list.html.twig
+++ b/src/Pheetup/CoreBundle/Resources/views/Crud/list.html.twig
@@ -1,3 +1,8 @@
+{% for flashMessage in app.session.flashbag.get('notice') %}
+
+    {{ flashMessage }}
+    <br>
+{% endfor %}
 List of {{ title }}
 <table>
     <thead>
@@ -18,4 +23,5 @@ List of {{ title }}
         </tr>
     {% endfor %}
     </tbody>
+
 </table>
