--- a/src/Pheetup/CoreBundle/Resources/views/Crud/list.html.twig
+++ b/src/Pheetup/CoreBundle/Resources/views/Crud/list.html.twig
@@ -1,8 +1,9 @@
-{% for flashMessage in app.session.flashbag.get('notice') %}
-
-    {{ flashMessage }}
-    <br>
-{% endfor %}
+{% if(app.session is not null) %}
+    {% for flashMessage in app.session.flashbag.get('notice') %}
+        {{ flashMessage }}
+        <br>
+    {% endfor %}
+{% endif %}
 List of {{ title }}
 <table>
     <thead>
