--- a/src/Pheetup/SiteBundle/Resources/views/Default/index.html.twig
+++ b/src/Pheetup/SiteBundle/Resources/views/Default/index.html.twig
@@ -28,7 +28,20 @@
     <!-- /.row -->
 
     <hr>
-
+    <!-- Last Events -->
+    <div class="row">
+        <div class="col-md-6">
+            <h3>Last Events</h3>
+            <ul>
+                {% for event in lastEvents %}
+                    <li>
+                        <a href="{{ url('pheetup_site_default_event',{id: event.id,group: event.group.domain }) }}">{{ event.title }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+    <!-- /.row -->
     <hr>
 
     <!-- Pagination -->
