--- a/src/Pheetup/SiteBundle/Resources/views/layout.html.twig
+++ b/src/Pheetup/SiteBundle/Resources/views/layout.html.twig
@@ -40,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Pheetup</a>
+            <a class="navbar-brand" href="/">Pheetup</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="main_menu">
