--- a/src/Pheetup/CoreBundle/Resources/views/Crud/list.html.twig
+++ b/src/Pheetup/CoreBundle/Resources/views/Crud/list.html.twig
@@ -18,8 +18,8 @@ List of {{ title }}
         <tr>
             <td>{{ item.id }}</td>
             <td>
-                <a href="{{ url('pheetup_event_delete',{id: item.id}) }}" data-id="{{ item.id }}">delete</a> -
-                <a href="{{ url('pheetup_event_create',{id: item.id}) }}">edit</a>
+                <a href="{{ url((route~"_delete"),{id: item.id}) }}" data-id="{{ item.id }}">delete</a> -
+                <a href="{{ url((route~"_create"),{id: item.id}) }}">edit</a>
             </td>
         </tr>
     {% endfor %}
