--- a/src/Pheetup/CoreBundle/Resources/views/Crud/create.html.twig
+++ b/src/Pheetup/CoreBundle/Resources/views/Crud/create.html.twig
@@ -1,1 +1,17 @@
-{{ form(form) }}
+{% extends '@PheetupAdmin/layout.html.twig' %}
+{% block body %}
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-lg-6">
+                        {{ form_start(form) }}
+                        <div class="form-group">
+                            {{ form(form) }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
