AdminBundle assets added and jquery datetimepicker installed

--- a/src/Pheetup/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Pheetup/AdminBundle/Resources/views/layout.html.twig
@@ -21,13 +21,16 @@
     <link href="{{ asset_url }}" rel="stylesheet">
     {% endstylesheets %}
 
-    <!-- Custom CSS -->
-    {% stylesheets '@PheetupAdminBundle/Resources/public/css/sb-admin-2.css' %}
-    <link href="{{ asset_url }}" rel="stylesheet">
-    {% endstylesheets %}
-
     <!-- Custom Fonts -->
     {% stylesheets '@PheetupAdminBundle/Resources/public/css/font-awesome.min.css' %}
+    <link href="{{ asset_url }}" rel="stylesheet">
+    {% endstylesheets %}
+    <!--DateTime Picker CSS-->
+    {% stylesheets '@PheetupAdminBundle/Resources/public/css/jquery.datetimepicker.min.css' %}
+    <link href="{{ asset_url }}" rel="stylesheet">
+    {% endstylesheets %}
+    <!-- Custom CSS -->
+    {% stylesheets '@PheetupAdminBundle/Resources/public/css/sb-admin-2.css' %}
     <link href="{{ asset_url }}" rel="stylesheet">
     {% endstylesheets %}
 
@@ -224,13 +227,16 @@
     {% javascripts '@PheetupAdminBundle/Resources/public/js/metisMenu.min.js' %}
     <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
-
+    <!-- DateTime Picker JavaScript-->
+    {% javascripts '@PheetupAdminBundle/Resources/public/js/jquery.datetimepicker.full.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 
     <!-- Custom Theme JavaScript -->
     {% javascripts '@PheetupAdminBundle/Resources/public/js/sb-admin-2.js' %}
     <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
-
+</div>
 </body>
 
 </html>
